--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -132,7 +132,7 @@ fn generate_app_env() -> AppEnvironment {
 再后面AppEnvironment的对象在多线程环境里就可以随便复制了。
 
 ### 多层Option和Result带来的缩进问题
-第二个碰到的伤心处和[Rust][1]的设计模型有关。[Rust][1]默认要开发者关心错误，并且没有空类型，这是个很好的想法。于是返回的对象一般是```Option<T>```或者```Result<T, E>```。然后麻烦就来了。有多级这个错误处理的缩进相当客观。如果全部重构成小的碎片代码维护成本和十分可观。比如有个函数我这么写的:
+第二个碰到的伤心处和[Rust][1]的设计模型有关。[Rust][1]默认要开发者关心错误，并且没有空类型，这是个很好的想法。于是返回的对象一般是```Option<T>```或者```Result<T, E>```。然后麻烦就来了。有多级这个错误处理的缩进相当客观。如果全部重构成小的碎片代码维护成本和十分可观。比如，日至模块的初始化函数我这么写的:
 
 ```rust
 pub fn init_with_level(
@@ -165,16 +165,185 @@ pub fn init_with_level(
 }
 ```
 
-当然你可以说这种```Result<T, E>```的我可以用 ```a = expr?;```语句。但是如果我不要它返回，只是忽略呢？又或者Option和Result混用呢？再或者错误类型不同呢（框架的错误类型和应用的错误类型不同还蛮常见的吧）？目前也没有什么特别好的方法。
+上面是我按[log规范](https://crates.io/crates/log)写的能够自动滚动的文件日志的模块。当然自己写也是因为看了一圈[Rust][1]的已有组件没有轻量级且合适的。
+
+当然你可以说上面这种```Result<T, E>```的我可以用 ```a = expr?;```语句。但是如果我不要它返回，只是忽略呢？又或者Option和Result混用呢？再或者错误类型不同呢（框架的错误类型和应用的错误类型不同还蛮常见的吧）？目前也没有想到什么特别好的方法。
 
 ### 生命周期转移的习惯差异
-a = a.fn();
+第三个问题则是一处理解和习惯上的差异。在C/C++里，我们经常会很自然的写出这种代码:
+```cpp
+clazz a;
+
+a.act1();  // 先做第一个逻辑
+a.act2();  // 再第二个
+a.act3()); // 再第三个
+// ...
+```
+
+上面的逻辑或是逻辑相关，或是有前置检查。也比较自然，但是碰到[Rust][1]的函数声明如果是:
+```rust
+impl clazz {
+    pub fn act1(mut self) -> Self {
+        // ...
+        self
+    }
+    pub fn act2(mut self) -> Self {
+        // ...
+        self
+    }
+    pub fn act3(mut self) -> Self {
+        // ...
+        self
+    }
+}
+```
+这种，那直接调用
+```rust
+let a = clazz();
+
+a.act1();  // 先做第一个逻辑
+a.act2();  // 再第二个
+a.act3()); // 再第三个
+```
+这样就会编译不过了。这是因为这三个函数接管了```clazz```的生命周期。然后通过返回值返回了。那么什么地方会有上面这种形式的接口呢？比如说那个命令行参数的解析库[clap][17]里的注册参数的函数:
+```rust
+pub fn arg<A: Into<Arg<'a, 'b>>>(mut self, a: A) -> Self {
+    self.p.add_arg(a.into());
+    self
+}
+```
+这种形式比第一个参数直接传入```&self```的好处是可以内部转移生命周期和执行生命周期推断和检查，也可以在内部分析是否有必要复制（如果要切换到多线程环境）。对于这种情况，有两种调用方法:
+```rust
+// 连续调用
+a.act1()
+ .act2()
+ .act3();
+
+// 如果中间需要穿插其他的处理的话就
+a = act1();
+// do something
+a = act2();
+// do something
+a = act3();
+```
 
 ### 生命周期的模板推导
-
+现在[Rust][1]的模板推导已经非常强大了，但是感觉生命周期的推导还不是很完善。因为有些地方我认为理论上是可以推导出来的生命周期申明，但实际上推导不出来，需要显式声明。这个在写上面那个小小服务器程序的过程中碰到了，但是后来我换了一种方法，原来的有问题的sample code找不到了，也不是那么容易碰到的问题。
 
 ### 面向对象惯性思维的冲突
-继承公共函数问题
+在写这个程序的时候，发生了几次思维模式上的冲突。一开始我想使用[actix-web][13]的自定义handle的方式来处理请求调度。[actix-web][13]的自定义如下：
+```rust
+// handle的声明
+#[allow(unused_variables)]
+pub trait Handler<S>: 'static {
+    /// The type of value that handler will return.
+    type Result: Responder;
+
+    /// Handle request
+    fn handle(&self, req: &HttpRequest<S>) -> Self::Result;
+}
+
+// 接口声明如下
+impl<S> Resource<S> {
+    pub fn h<H: Handler<S>>(&mut self, handler: H) {
+        self.routes.push(Route::default());
+        self.routes.last_mut().unwrap().h(handler)
+    }
+}
+```
+
+另外我也没搞清楚类型限定用冒号 ```:``` 和用 ```where``` 关键字有啥区别。
+我想加一个类似 ***基类*** 的traits，然后统一处理Repsonse和错误处理。所以声明了一个父traits然后声明了新的接口实现像这样（为了多模拟一些更复杂且更贴近实际使用的场景里面没有用最简单的结构）:
+
+```rust
+use std::marker::PhantomData;
+
+#[allow(unused_variables)]
+trait Handler<S> {
+    type Result: std::fmt::Display;
+
+    fn handle(&self) -> Self::Result;
+}
+
+trait BaseT<S>: Handler<S, Result = String> {
+    fn dispatch(&self, s: String) -> String;
+
+    fn handle(&self) -> String {
+        self.dispatch(String::from("Hello, world!"))
+    }
+}
+
+struct ObjectT();
+
+impl<S> BaseT<S> for ObjectT {
+    fn dispatch(&self, s: String) -> String {
+        s
+    }
+}
+
+struct Manager();
+
+impl Manager {
+    pub fn h<H: Handler<String>>(&self, handler: H) {
+        println!("{}", handler.handle());
+    }
+}
+
+fn main() {
+    let mgr = Manager();
+    mgr.h(ObjectT());
+}
+
+```
+一切看似很美好，然而这是编译不通过的。报出的错误是```ObjectT```没有提供```Handler<S>```的实现。按照通常的理解，我们有```impl<S> BaseT<S> for ObjectT```，而```BaseT<S>```又是继承```Handler<S, Result = String>```的，那么```ObjectT```也应该有```Handler<S, Result = String>```的实现才对，但是实际上不能直接这么做。以下是一种针对这种情况可行的方法:
+```rust
+use std::marker::PhantomData;
+
+#[allow(unused_variables)]
+trait Handler<S> {
+    type Result: std::fmt::Display;
+
+    fn handle(&self) -> Self::Result;
+}
+
+trait BaseT<S>: Handler<S, Result = String> {
+    fn dispatch(&self, s: String) -> String;
+}
+
+struct ObjectT();
+
+impl<S, T> Handler<S> for T
+where
+    T: BaseT<S>,
+{
+    type Result = String;
+
+    fn handle(&self) -> String {
+        self.dispatch(String::from("Hello, world!"))
+    }
+}
+
+impl<S> BaseT<S> for ObjectT {
+    fn dispatch(&self, s: String) -> String {
+        s
+    }
+}
+
+struct Manager();
+
+impl Manager {
+    pub fn h<H: Handler<String>>(&self, handler: H) {
+        println!("{}", handler.handle());
+    }
+}
+
+fn main() {
+    let mgr = Manager();
+    mgr.h(ObjectT());
+}
+```
+
+这里的关键点在 ```impl<S, T> Handler<S> for T where T: BaseT<S>``` 这里。但是这种情况也是有限制的，那就是这中特殊的范型必须和```traits Handler<S>```在同一个文件里。仔细想想这也合理，否则很容易被外部破坏内部行为。但是这也就有个问题，那就是外部模块没办法使用这种方式来抽象公共逻辑写法了。
 
 ### C++习惯对借用理解的冲突
 复制和引用对象
@@ -220,7 +389,7 @@ Rust2018
 ```rust
 macro_rules! bitflags {
     (
-        $(#[$outer:meta])*发现
+        $(#[$outer:meta])*
         pub struct $BitFlags:ident: $T:ty {
             $(
                 $(#[$inner:ident $($args:tt)*])*
@@ -274,7 +443,7 @@ fn main() {
         let mut incoming = listener.incoming();
 
         while let Some(stream) = await!(incoming.next()) {
-            let stream = stream.u发现nwrap();
+            let stream = stream.unwrap();
             handle(stream);
         }
     });
@@ -290,10 +459,10 @@ fn main() {
 
 最近[Go 2的范型和错误处理草案](https://go.googlesource.com/proposal/+/master/design/go2draft.md)出来啦，看到篇[文章](https://rust.cc/article/522824c1-a5c4-4c8c-a8fe-c001d0b7d331)说参考了不少[Rust][1]的设计。我看了一下确实和[Rust][1]的设计模型很像。
 
-发现的名字很非主流了，万万没想到golang用了个更调皮的名字 ```contract``` 。
-发现
-发现和有兴趣的小伙伴们交流。
-发现
+话说我已经觉[Rust][1]的名字命名很非主流了，万万没想到golang用了个更调皮的名字 ```contract``` 。
+
+[Rust][1]的学习成本真的是高，但是语言设计也真的是精巧。我上面的理解也可能有一些错误或者不完善的地方，希望能和有兴趣的小伙伴们也一起交流。
+
 [1]: https://rust-lang.org/
 [2]: https://kaisery.github.io/trpl-zh-cn/
 [3]: https://doc.rust-lang.org/book/second-edition/
