--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -21,7 +21,7 @@ JUST PRACTICE
 ----------------------------------------------
 蛮久前入门了一下 [Rust][1] 语言。它的设计模型非常地吸引C/C++的开发者。但是学习语言嘛还是要练习一下，之前也用它给我们项目写了个命令行小工具。这回拿来写个小型的服务器程序吧。
 
-Rust的生态还处于非常初级的阶段。很多组件和库都处于开发中和设计变更的阶段，比起golang来，很多功能库都没有。
+[Rust][1] 的生态还处于非常初级的阶段。很多组件和库都处于开发中和设计变更的阶段，比起golang来，很多功能库都没有。
 服务器编程本身特别注重高并发能力和，高性能。和原来很多客户端程序的思路是不太一样的。所以本来想等新的Futures和await和2.0版本的宏机制完成再搞。而老的[Futures][14]库由于即将移入核心库，在[crates.io][5]上下架了。现在似乎很多[Rust][1]的库都按[Tokio][7]的的模式来，于是我看了一下基于[Futures][14]的多路复用IO库[Tokio][7]的文档来练习一下这个小服务器程序。
 
 至于写个啥呢？之前想把 [IntelliJ IDEA License Server v1.6](http://blog.lanyus.com/archives/326.html) 部署到路由器上玩来着。无奈看了一下作者似乎是用golang写的。golang也是个地址怪兽，启动后虽然内存消耗只有4MB，但是地质空间分配了800MB。这对大型服务器程序其实没什么，但是我看了下我的路由器上是开了 ```vm.overcommit_memory=2``` 的，这意味着进程地址空间太大也会直接OOM。所以就尝试按他们提供的方法，[Rust][1]写一个看看吧。当然只是玩具有条件的童鞋还是支持正版呗。
@@ -346,16 +346,26 @@ fn main() {
 这里的关键点在 ```impl<S, T> Handler<S> for T where T: BaseT<S>``` 这里。但是这种情况也是有限制的，那就是这中特殊的范型必须和```traits Handler<S>```在同一个文件里。仔细想想这也合理，否则很容易被外部破坏内部行为。但是这也就有个问题，那就是外部模块没办法使用这种方式来抽象公共逻辑写法了。
 
 ### C++习惯对借用理解的冲突
-复制和引用对象
+
+C++写得多了以后，为了减少很多无意义的指针判空和减少拷贝。我们很多地方会用引用。所以带到[Rust][1]之后，很多地方也习惯性的认为不加 ```&``` 时会是对象复制而加上了 ```&``` 符号，其实在其他很多语言里没有这个 ```&``` 符号反而不太会被误导。其实在[Rust][1]里默认也是引用传递的，并且还带上了生命周期信息，而 ```&``` （[Rust][1]里叫借用） 可以理解为不带生命周期的引用传递。
+
+函数类型里带了 ```&``` 也没啥，也就里面不能再使用会影响生命周期的功能，不能move，然后编译期推断可能得手动显式地写生命周期参数。所以通常来说，如果是非必须，还是不要带这个 ```&``` 比较好。 
 
 加密组件
 ----------------------------------------------
+这次写得这个小服务器程序需要使用加密算法组件。所以我看了一圈目前[Rust][1]上比较流行的加密算法库，还依稀记得之前适配[openssl][12]的酸爽。
 
 ### [rustls][8]、[webpki][9]和[ring][10]
+这一套是目前[Rust][1]上比较火热的套件集合。这个是首选，构建流程和使用上会方便一些。这三个东西其实是一套，[ring][10]是最底层的s算法实现，[webpki][9]是在[ring][10]基础上的封装的验签库，然后[rustls][8]是在[webpki][9]和[ring][10]基础上实现的TLS接口封装。
+
+然而我上面那个小程序需要RSA+MD5的验签方式，它们不支持。所以只能放弃寻求它法。
 
 ### 百度传说中心脏不再出血的[MesaLink][11]
+之前看到新闻说百度出了个“心脏不再出血的[MesaLink][11]”，是用纯[Rust][1]实现的。想用它来代替[openssl][12]。然后华丽丽的发现，它就是拿了[rustls][8]来导出了一份[openssl][12]兼容的API，也是醉醉的。所以它也不支持RSA+MD5的验签。
 
 ### [openssl][12]和[openssl-sys][12]
+最后还是得回归[openssl][12]。还好还有个[openssl][12]的binding可以用。就是用这个的话，交叉编译和编译musl库会非常 麻烦。
+
 交叉编译和 ```features = ["vendored"]``` 的问题，Windows下的binding。
 
 交叉编译工具链-cross
@@ -407,6 +417,8 @@ macro_rules! bitflags {
 ### 宏与await
 
 年初的时候，说是[Rust][1]要搞个官方流程的futures和await流程。我看了一篇介绍 https://boats.gitlab.io/blog/post/2018-04-06-async-await-final/ 。虽然现在还没有release，但是最近Tokio已经除了预览版的sample了。
+
+在这篇文章写的过程中，我有看到篇长长长长长的文章， http://bryangilbert.com/post/code/rust/adventures-futures-tokio-rust/ 写得比较白话文一点。
 
 大概代码长这样
 ```rust
