add more tags for 1809

--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -13,6 +13,15 @@ tags:
   - http
   - websocket
   - clap
+  - cross
+  - cargo
+  - xargo
+  - openssl
+  - rustls
+  - ring
+  - tokio
+  - features
+  - await
 title: Rust的第二次接触-写个小服务器程序
 type: post
 ---
@@ -538,7 +547,7 @@ fn main() {
 
 [1]: https://rust-lang.org/
 [2]: https://kaisery.github.io/trpl-zh-cn/
-[3]: https://doc.rust-lang.org/book/second-edition/
+[3]: https://doc.rust-lang.org/book/
 [4]: https://docs.rs/
 [5]: https://crates.io/
 [6]: http://doc.crates.io/guide.html
