add more tags for 1809

--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -22,6 +22,7 @@ tags:
   - tokio
   - features
   - await
+  - mesalink
 title: Rust的第二次接触-写个小服务器程序
 type: post
 ---
@@ -141,7 +142,7 @@ fn generate_app_env() -> AppEnvironment {
 再后面AppEnvironment的对象在多线程环境里就可以随便复制了。
 
 ### 多层Option和Result带来的缩进问题
-第二个碰到的伤心处和[Rust][1]的设计模型有关。[Rust][1]默认要开发者关心错误，并且没有空类型，这是个很好的想法。于是返回的对象一般是```Option<T>```或者```Result<T, E>```。然后麻烦就来了。有多级这个错误处理的缩进相当客观。如果全部重构成小的碎片代码维护成本和十分可观。比如，日至模块的初始化函数我这么写的:
+第二个碰到的伤心处和[Rust][1]的设计模型有关。[Rust][1]默认要开发者关心错误，并且没有空类型，这是个很好的想法。于是返回的对象一般是```Option<T>```或者```Result<T, E>```。然后麻烦就来了。有多级这个错误处理的缩进相当客观。如果全部重构成小的碎片代码维护成本和十分可观。比如，日志模块的初始化函数我这么写的:
 
 ```rust
 pub fn init_with_level(
@@ -441,6 +442,8 @@ rustc -Z unstable-options --print target-spec-json --target aarch64-unknown-linu
 cross build --target aarch64-unknown-linux-uclibc ;
 # cross build --target aarch64-unknown-linux-uclibc --release --features system-alloc ; 
 ```
+
+不过这一套还是有些局限性。可能因为是基于docker的，我这里在 [manjora](https://manjaro.org/) 发行版的Linux下尝试，只能打出linux+x86_64/i686和aarch64的二进制。其他的都失败了，可能和docker和宿主机共享内核有关。也可能其他环境的环境镜像没有很完善。
 
 Rust2018
 ----------------------------------------------
