--- a/source/post/2018/1810.md
+++ b/source/post/2018/1810.md
@@ -16,6 +16,10 @@ title: "Webpack+vue+boostrap+ejs构建Web版GM工具"
 type: post
 ---
 
+前言
+------------------------------------------------
+
+Web前端的组件技术刷新真的是日新月异，前段时间看到很多童鞋分享了[webpack][webpack]的使用，刚好之前做我们游戏里Web版的GM工具的时候正烦着怎么用简单的方式，做模块分离并且又不需要引入重量级的第三方库或组件。
 
 安装webpack
 ------------------------------------------------
@@ -62,3 +66,6 @@ typescript支持
 ------------------------------------------------
 
 + monaco-editor-webpack-plugin
+
+
+[webpack]: https://webpack.js.org/
