补一些之前漏的内容

--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -240,20 +240,29 @@ let a = if abc {
 
 在看[Rust][1]文档的过程中，看得出来[Rust][1]的设计哲学是尽可能地无运行时开销并在编译期发现更多地错误。并且要求你关注失败和避免意料之外地开销。
 
-所谓意料之外的开销是指比如C++有很多隐式类型转换和复制构造。而且由于历史和优先保证正确性的原因，默认就是复制。像 ```std::string``` 传递的时候可能会产生的复制，以及一不小型模板推断出了个std::vector<T, ALLOC>类型作为函数参数，那会导致整个复制。
+所谓意料之外的开销是指比如C++有很多隐式类型转换和复制构造。而且由于历史和优先保证正确性的原因，默认就是复制。像 ```std::string``` 传递的时候可能会产生的复制，以及一不小心模板推断出了个std::vector<T, ALLOC>类型作为函数参数，那会导致整个复制。
 
 另外在C++里，我们经常会用一些技巧去限制工程实现，以达到提高工程质量的效果，而且写技巧往往晦涩难懂。而[Rust][1]没有这些历史包袱，就设计了一个比较良好的编译期检查。
 
 
-生命周期，api级别阻止内存错误，编译期。
+[Rust][1]生命周期分析会在编译期分析对象的所有权。它只允许一个对象被一个位置锁拥有，其他地方都只能 **借用** 。这有一个好处就是强制你去写安全的代码。而前面提到C++的一些隐式复制的问题，在[Rust][1]里仅能隐式的转移（move语义），转移后生命周期也一并转移了，所有权仍然只有一个。这样就最大限度减少了不必要的复制。而真正的复制操作就是需要使用者显式去关心的。最简单的复制也需要使用一个 ```Clone``` 宏标记，然后调用clone方法。
 
+```rust
+#[derive(Clone)]
+struct Point {
+    x: i32,
+    y: i32,
+}
 
-自动转移（move）语意和api强制关注坑（str拷贝，未处理的match）
+let p1 = Point{x: 1, y: 2};
+let p2 = p1.clone();
+```
 
-    泛型 <T: Display + Clone> 或<T> where T: Display + Clone
-        操作符重载 PartialOrd
-        Mut => Copy
-        println!格式化字符串 => ToString(标准库的Display::to_string函数)
+泛型和操作符重载
+-----------------------
+[Rust][1]的泛型没什么太多可说的。大体上就是 ```<T: Display + Clone>``` 或```<T> where T: Display + Clone``` 这两种形式。
+
+[Rust][1]的操作服重载相当于是要实现 **std** 库里 **PartialOrd** 的 **traits** 。不过 **std** 库是可以禁用掉的，这种情况似乎操作符重载也GG了。
 
 宏
 -----------------------
