再补全一点

--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -260,9 +260,33 @@ let p2 = p1.clone();
 
 泛型和操作符重载
 -----------------------
-[Rust][1]的泛型没什么太多可说的。大体上就是 ```<T: Display + Clone>``` 或```<T> where T: Display + Clone``` 这两种形式。
+[Rust][1]的泛型没什么太多可说的。加类型限定的泛型大体上就是 ```<T: Display + Clone>``` 或 ```<T> where T: Display + Clone``` 这两种形式。有一点特别的地方就是因为[Rust][1]有生命周期的概念，所以泛型里面可以带生命周期，并且类型限定也可以，比如： ```<T: Display + Clone + 'static>``` 这种就是泛型的类型匹配Display和Clone和静态生命周期（比如函数和静态变量都是静态生命周期的）。
 
-[Rust][1]的操作服重载相当于是要实现 **std** 库里 **PartialOrd** 的 **traits** 。不过 **std** 库是可以禁用掉的，这种情况似乎操作符重载也GG了。
+[Rust][1]的操作服重载相当于是要实现 [**std::ops**](https://doc.rust-lang.org/std/ops/index.html) 里的 **traits** 。不过 **std** 库是可以禁用掉的，这种情况似乎操作符重载也GG了。
+
+比如重载 ```+=``` 符号:
+```rust
+use std::ops::AddAssign;
+
+struct Point {
+    x: i32,
+    y: i32,
+}
+
+impl AddAssign for Point {
+    fn add_assign(&mut self, other: Point) {
+        *self = Point {
+            x: self.x + other.x,
+            y: self.y + other.y,
+        };
+    }
+}
+
+let mut point = Point { x: 1, y: 0 };
+point += Point { x: 2, y: 3 };
+```
+
+唯一有点特别的是仿函数重载，分成了 ```Fn```, ```FnMut```, 和 ```FnOnce``` 三种，对应的第一个 ```self``` 参数分别是 ```&self```, ```&mut self``` 和 ```self```。这个主要还是和[Rust][1]的生命周期的编译期推断的设计模型有关。
 
 宏
 -----------------------
