--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -489,7 +489,7 @@ macro_rules! bitflags {
 
 ### 宏与await
 
-年初的时候，说是[Rust][1]要搞个官方流程的futures和await流程。我看了一篇介绍 https://boats.gitlab.io/blog/post/2018-04-06-async-await-final/ 。虽然现在还没有release，但是最近Tokio已经除了预览版的sample了。
+年初的时候，说是[Rust][1]要搞个官方流程的futures和await流程。我看了一篇介绍 https://boats.gitlab.io/blog/post/2018-04-06-async-await-final/ 。虽然现在还没有release，但是最近Tokio已经出了预览版的sample了。
 
 在写这篇总结的过程中，我又看到篇长长长长长的文章， http://bryangilbert.com/post/code/rust/adventures-futures-tokio-rust/ 写得比较白话文一点。
 
