update deps, add sitesource and pagesource

--- a/themes/distinctionpp/i18n/en-US.yaml
+++ b/themes/distinctionpp/i18n/en-US.yaml
@@ -42,3 +42,7 @@
   translation: "Menu"
 - id: theme
   translation: "Theme"
+- id: site_source
+  translation: "Site Source"
+- id: page_source
+  translation: "Page Source"
