add new random algorithm & google distributed system paper draft

--- a/source/post/2018/1810.md
+++ b/source/post/2018/1810.md
@@ -5,7 +5,7 @@ categories:
   - Blablabla
 date: 2018-10-18 13:43:31
 draft: false
-id: 1809
+id: 1810
 tags: 
   - xoshiro
   - xoroshiro
@@ -20,7 +20,7 @@ title: "2018年的新通用伪随机数算法(xoshiro / xoroshiro)的C++(head on
 type: post
 ---
 
-前段时间看到说[Lua 5.4][1]用了一种新的通用随机数算法，替换掉本来内部使用的CRT的随机数引擎。我看了一下大致的实现，CPU和空间复杂度任然保持了一个较低的水平，并且循环节和说是随机性都还不错。我们游戏项目中原本对大量随机数场景的随机数算法使用的是TAUS88，但是使用过程中发现这个算法分布上还是有一些不是很理想，所以就想把这个新的科研成果也用进我们项目中试试看效果。
+前段时间看到说[Lua 5.4][1]用了一种新的通用随机数算法，替换掉本来内部使用的CRT的随机数引擎。我看了一下大致的实现，CPU和空间复杂度任然保持了一个较低的水平，并且循环节和说是随机性都还不错。我们游戏项目中原本对大量随机数场景的随机数算法使用的是基于线性同余的TAUS88，但是使用过程中发现这个算法分布上还是有一些不是很理想，所以就想把这个新的科研成果也用进我们项目中试试看效果。
 
 新写的 [xoshiro / xoroshiro][3] 随机数引擎的特点如下: 
 
@@ -34,7 +34,7 @@ type: post
 以下是简化版代码，实际上分三个文件:
 1. 上半部是[xoshiro / xoroshiro][3]算法实现
 2. 中部是随机数功能封装，用于提供多引擎下统一的随机数接口。剥离里项目中的梅森旋转和TAUS88引擎。
-3. 下半部是简化的单元测试。
+3. 下半部是简化的单元测试，单元测试数据是采集自原作者的纯C代码的运行结果。
 
 完整的代码和单元测试见 [atframework][2] 的utils项目: http://github.com/atframework/atframe_utils
 
@@ -45,8 +45,9 @@ type: post
  * @see http://xoshiro.di.unimi.it
  * @note 2018年的新型的全功能型伪随机数算法，也是lua 5.4内建的伪随机数算法
  *
+ * Licensed under the MIT licenses.
  * @version 1.0
- * @author owentou
+ * @author OWenT
  * @date 2018年09月30日
  *
  * @history
@@ -256,8 +257,9 @@ namespace util {
  * @file random_generator.h
  * @brief 伪随机数生成器
  *
+ * Licensed under the MIT licenses.
  * @version 1.0
- * @author owentou
+ * @author OWenT
  * @date 2018年09月30日
  *
  * @history
