--- a/source/post/2018/1811.md
+++ b/source/post/2018/1811.md
@@ -19,7 +19,13 @@ type: post
 前言
 ------------------------------------------------
 
-Web前端的组件技术刷新真的是日新月异，前段时间看到很多童鞋分享了[webpack][webpack]的使用，刚好之前做我们游戏里Web版的GM工具的时候正烦着怎么用简单的方式，做模块分离并且又不需要引入重量级的第三方库或组件。
+Web前端的组件技术刷新真的是日新月异，前段时间看到很多童鞋分享了[webpack][1]的使用，刚好之前做我们游戏里Web版的GM工具的时候正烦着怎么用简单的方式，做模块分离并且又不需要引入重量级的第三方库或组件。
+
+我们的Web版GM工具长差不多这个样子。
+
+![]()
+
+因为分成了好几个模块，然后由于用的是bootstrap的
 
 安装webpack
 ------------------------------------------------
@@ -62,10 +68,10 @@ typescript支持
 + typescript
 + vue-ts-loader
 
-继承VSCode: monaco-editor
+集成VSCode: monaco-editor
 ------------------------------------------------
 
 + monaco-editor-webpack-plugin
 
 
-[webpack]: https://webpack.js.org/
+[1]: https://webpack.js.org/
