update gitbook index

--- a/source/post/2018/1813.md
+++ b/source/post/2018/1813.md
@@ -157,7 +157,7 @@ class Transaction {
 
 ## 其他
 
-关于其他的部分，其实感觉不是那么难点就不详述了。通知服务无非是做了下错峰执行以防连锁性的数据变更通知而导致性能毛刺，Paper里也用了比较简单的设计，假定某种数据只有一个观察者，也确实增加多观察者也并不难。性能方面，单机性能也一般般，当然比MySQL是好一些。
+关于其他的部分，其实感觉不是那么难点就不详述了。通知服务无非是做了下错峰执行以防连锁性的数据变更通知而导致性能毛刺，减小惊群效应。 Paper里也用了比较简单的设计，假定某种数据只有一个观察者，也确实增加多观察者也并不难。性能方面，单机性能也一般般，当然比MySQL是好一些。
 
 |         | Bigtable | Percolator | Relative |
 |---------|----------|------------|----------|
