--- a/source/post/2018/1813.md
+++ b/source/post/2018/1813.md
@@ -18,10 +18,10 @@ type: post
 前言
 ================================================
 
-之前看过 [《大规模分布式存储系统：原理解析与架构实战》][1] ，这个系统设计还是挺有意思的，里面提及了Google的一整套系统都有论文，而且现在已经进化到下一代支持分布式事务的关系型数据库系统了。所以一直很想抽时间看看Google的那套去中心化并且可以平行扩容的分布式系统和数据库的论文。之前一些计划中的我自己的项目的优化项都差不多完成了，这段时间就陆陆续续的看完了这三篇Paper，可怜我的渣渣英语，所以看得比较慢。
+之前看过 [《大规模分布式存储系统：原理解析与架构实战》][1] ，这个系统设计还是挺有意思的，里面提及了Google的一整套系统都有论文，而且现在已经进化到下一代支持分布式跨行事务的关系型数据库系统了。所以一直很想抽时间看看Google的那套去中心化并且可以平行扩容的分布式系统和数据库的论文。之前一些计划中的我自己的项目的优化项都差不多完成了，这段时间就陆陆续续的看完了这三篇Paper，可怜我的渣渣英语，所以看得比较慢。
 
 Google的分布式系统基础组件的层层迭代真的是做的很好。在假定所有节点都可能出故障,并且任何节点出故障都不影响可用性的基础上，先是实现了分布式PB
-级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable]的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和在 **Spanner**[^spanner] 的基础上实现的关系型数据库系统 **F1**[^f1]。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
+级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和在 **Spanner**[^spanner] 的基础上实现的关系型数据库系统 **F1**[^f1]。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
 
 现在业界也很多基于这些理论并在其上进行优化的数据库项目，比较知名的比如阿里的 [PolarDB][4] 和 [pingcap][2] 的 [TiDB][3] 。
 
@@ -157,7 +157,7 @@ class Transaction {
 
 ## 其他
 
-关于其他的部分，其实感觉不是那么难点就不详述了。通知服务无非是做了下错峰执行以防连锁性的数据变更通知而导致性能毛刺，减小惊群效应。 Paper里也用了比较简单的设计，假定某种数据只有一个观察者，也确实增加多观察者也并不难。性能方面，单机性能也一般般，当然比MySQL是好一些。
+关于其他的部分，其实感觉不是那么难点就不详述了。通知服务是做成了周期性检查执行，而不是按事件通知，以此来防连锁性的数据变更通知而导致性能毛刺。 Paper里也用了比较简单的设计，约定某种数据只有一个观察者（虽然功能上支持多观察者），观察者总数也很少。最终达到减小惊群效应的效果。性能方面，单机性能也一般般，当然比MySQL是好一些。
 
 |         | Bigtable | Percolator | Relative |
 |---------|----------|------------|----------|
@@ -172,7 +172,7 @@ Spanner[^spanner]
 
 基于时间戳API的多版本数据库
 
-SQL-based，支持分布式事务，支持原子更新元表
+SQL-based，支持分布式事务，支持跨行事务，支持原子更新元表
 
 副本管理可以随着数据量增长动态分配，也可以由应用程序控制。数据在数据中心中的迁移对应用层是透明的。
 
@@ -188,6 +188,14 @@ SQL-based，支持分布式事务，支持原子更新元表
 ![Spanner 结构](1813-01.png)
 
 
+按 Key+时间戳 来作为 **Spanner**[^spanner] 的Key，并以此来划分 **tablet** （类似 **Bigtable**[^bigtable] 的 **tablet** ）。
+
+每个 **spanserver** 都服务一部分 **tablet** ，具体的负载均衡和副本管理由上层 **zonemaster** 决定。每个 **tablet** 有自己的 **Paxos**[^paxos] 组（一组 **tablet** 的主备一起组成一个 **Paxos group**），并以此来选出来哪个 **spanserver** 是主节点。这意味着在 **Spanner**[^spanner] 中， **Paxos**[^paxos] 的数据分组数量会非常多。 不过 **Paxos**[^paxos] 仅仅是用来选主的，具体分片信息是存储在主节点的 **tablet** 里。 
+
+数据按桶组织在 **directory** 里，个人理解有点像 **redis-cluster**[^redis] 里的 **slot** ，里面包含了一系列的 **tablet** 。这也是 **Spanner**[^spanner] 数据管理和迁移的单位。 即便在事务执行过程中 **directory** 也可以被迁移（ 原文中叫 **Movedir** 任务）。 对于不跨 **directory** 的事务，主节点直接执行就行了，对于跨 **directory** 的事务，则需要选举出一个 **spanserver** 作为事务处理主节点。 **spanserver** 里有专门的 **transaction manager** 来处理这一类事情。
+
+**Movedir** 任务迁移数据的时候是每次锁两个相关的 **Paxos group** 然后执行数据迁移。这样即便事务执行时间比较长的时候，也不会因为大量锁数据而导致大量的数据分片服务暂停。
+
 F1[^f1]
 ================================================
 
@@ -200,6 +208,7 @@ F1[^f1]
 [^percolator]: https://ai.google/research/pubs/pub36726 "Large-scale Incremental Processing Using Distributed Transactions and Notifications"
 [^spanner]: https://ai.google/research/pubs/pub39966 "Spanner: Google's Globally-Distributed Database"
 [^f1]: https://ai.google/research/pubs/pub41344 "F1: A Distributed SQL Database That Scales"
+[^redis]: https://redis.io "Redis"
 
 [1]: https://read.douban.com/ebook/10179010/
 [2]: https://pingcap.com/
