--- a/source/post/2018/1810.md
+++ b/source/post/2018/1810.md
@@ -74,7 +74,7 @@ namespace util {
              *          xoroshiro128+
              * @note not support for xoroshiro64** 、xoroshiro64*、xoroshiro512** 、xoroshiro512*、xoroshiro1024** 、xoroshiro1024*
              */
-            template <class UIntType, bool is_plus, int iidx, int n1, int n2>
+            template <typename UIntType, bool is_plus, int iidx, int n1, int n2>
             class xoshinro_engine {
             public:
                 typedef UIntType    result_type;
@@ -88,15 +88,15 @@ namespace util {
                     return (x << k) | (x >> ((sizeof(result_type) * 8) - static_cast<result_type>(k)));
                 }
 
-                template <class, bool>
+                template <typename, bool>
                 struct next_init;
 
-                template <class T>
+                template <typename T>
                 struct next_init<T, true> {
                     static inline result_type call(seed_type &s) { return s[0] + s[3]; }
                 };
 
-                template <class T>
+                template <typename T>
                 struct next_init<T, false> {
                     static inline result_type call(seed_type &s) { return rotl(s[iidx] * 5, 7) * 9; }
                 };
@@ -167,7 +167,7 @@ namespace util {
                     }
                 }
 
-                template <class It>
+                template <typename It>
                 void init_seed(It &first, It last) {
                     It begin = first;
                     for (int i = 0; i < 4; ++i) {
@@ -312,7 +312,7 @@ namespace util {
              * @param [in] first 随机数种子散列值起始位置
              * @param [in] last 随机数种子散列值结束位置
              */
-            template <class It>
+            template <typename It>
             void init_seed(It &first, It last) {
                 core_.init_seed(first, last);
             }
