update using highlight.js 9.13.1

--- a/source/post/2018/1811.md
+++ b/source/post/2018/1811.md
@@ -328,7 +328,7 @@ module.exports = {
 
 ```tsconfig.json``` 的配置如下：
 
-```js
+```json
 {
     "compilerOptions": {
         "target": "es5",
@@ -360,9 +360,9 @@ module.exports = {
 
 ```package.json``` 里增加了脚本命令:
 
-```js
+```json
 {
-"scripts": {
+  "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   }
