adapt some bugs in hugo

--- a/source/post/2018/1811.md
+++ b/source/post/2018/1811.md
@@ -326,7 +326,7 @@ module.exports = {
 }
 ```
 
-```tsconfig.json``` 的配置如下：
+typescript配置文件 ```tsconfig.json``` 的配置如下：
 
 ```json
 {
@@ -358,7 +358,7 @@ module.exports = {
 }
 ```
 
-```package.json``` 里增加了脚本命令:
+然后 ```package.json``` 里增加了脚本命令:
 
 ```json
 {
@@ -369,7 +369,7 @@ module.exports = {
 }
 ```
 
-然后编译打包的时候只要运行 ```npm run dev``` 或 ```npm run build``` 就可以了。
+最后，编译打包的时候只要运行 ```npm run dev``` 或 ```npm run build``` 就可以了。
 
 [1]: https://webpack.js.org/
 [2]: https://www.npmjs.com/
