--- a/source/post/2018/1813.md
+++ b/source/post/2018/1813.md
@@ -21,7 +21,7 @@ type: post
 之前看过 [《大规模分布式存储系统：原理解析与架构实战》][1] ，这个系统设计还是挺有意思的，里面提及了Google的一整套系统都有论文，而且现在已经进化到下一代支持分布式跨行事务的关系型数据库系统了。所以一直很想抽时间看看Google的那套去中心化并且可以平行扩容的分布式系统和数据库的论文。之前一些计划中的我自己的项目的优化项都差不多完成了，这段时间就陆陆续续的看完了这三篇Paper，可怜我的渣渣英语，所以看得比较慢。
 
 Google的分布式系统基础组件的层层迭代真的是做的很好。在假定所有节点都可能出故障,并且任何节点出故障都不影响可用性的基础上，先是实现了分布式PB
-级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和在 **Spanner**[^spanner] 的基础上实现的关系型数据库系统 **F1**[^f1]。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
+级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和其前端 **F1**[^f1]。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
 
 现在业界也很多基于这些理论并在其上进行优化的数据库项目，比较知名的比如阿里的 [PolarDB][4] 和 [pingcap][2] 的 [TiDB][3] 。
 
@@ -168,25 +168,18 @@ Spanner[^spanner]
 
 **Spanner: Google's Globally-Distributed Database**[^spanner] 。
 
-基于 **时间戳API** （后面有提到）的多版本数据库
+**Spanner**[^spanner] 的特点是基于 **时间戳API** （后面有提到）的多版本数据库，SQL-based，支持分布式事务，支持跨行事务，支持原子更新元表，副本管理可以随着数据量增长动态分配，也可以由应用程序控制。数据在数据中心中的迁移对应用层是透明的。
 
-SQL-based，支持分布式事务，支持跨行事务，支持原子更新元表
-
-副本管理可以随着数据量增长动态分配，也可以由应用程序控制。数据在数据中心中的迁移对应用层是透明的。
-
-两个难点:
+**Spanner**[^spanner] 的设计有两个难点:
 
 + 对外的读写一致性
 + 全局读的强一致性，即某个时间点在整个集群任意节点读取数据都是一致的。
 
-使用时间戳API对事务排序，也以此来保证外部读写一致性。
-
-一个 **universermaster** 用于统计和调试。按物理部署的分zone，每个zone一个 **zonemaster** 用于分组管理和负载均衡，多个 **location proxy** 用于和客户端通信，成百上千个 **spanserver** 用于处理逻辑。
+**Spanner**[^spanner] 实际上使用 **时间戳API** 来对事务排序，也以此来保证外部读写一致性。运维结构是： 一个 **universermaster** 用于统计和调试。按物理部署的分zone，每个zone一个 **zonemaster** 用于分组管理和负载均衡，多个 **location proxy** 用于和客户端通信，成百上千个 **spanserver** 用于处理逻辑。
 
 ![Spanner 结构](1813-01.png)
 
-
-按 Key+时间戳 来作为 **Spanner**[^spanner] 的Key，并以此来划分 **tablet** （类似 **Bigtable**[^bigtable] 的 **tablet** ）。
+数据层面 **Spanner**[^spanner] 按 数据Key+时间戳 来作为 **Key**，并以此来划分 **tablet** （类似 **Bigtable**[^bigtable] 的 **tablet** ）。
 
 每个 **spanserver** 都服务一部分 **tablet** ，具体的负载均衡和副本管理由上层 **zonemaster** 决定。每个 **tablet** 有自己的 **Paxos**[^paxos] 组（一组 **tablet** 的主备一起组成一个 **Paxos group**），并以此来选出来哪个 **spanserver** 是主节点。这意味着在 **Spanner**[^spanner] 中， **Paxos**[^paxos] 的数据分组数量会非常多。 不过 **Paxos**[^paxos] 仅仅是用来选主的，具体分片信息是存储在主节点的 **tablet** 里。 
 
@@ -265,7 +258,9 @@ Paper里只是简单提了下关于时间方面的同步流程。大体上就三
 
 文中也有提到 **TrueTime API** 依赖CPU时钟，这个出故障的概率远远小于其他硬件所以可以忽略不计了。另外这个论文发布时的 **Spanner**[^spanner] 版本在延迟方面毛刺还比较严重。我估计时因为时间机制的定期同步+误差容忍值引起的。感觉还是由比较大的优化空间。
 
-个人感觉 **Spanner**[^spanner] 和 **Percolator**[^percolator] 相比最大的特点是用基 **Paxos group** 和 **TrueTime API** 代替了单点的时间戳服务。从而实现了真正意义上的平行扩容。这篇Paper没有太多提及事务的故障处理和冲突处理的部分，内容可能在我即将要看的F1 \( **Spanner**[^spanner] 的一个客户端实现 \) 里。而事务的故障处理就依赖协调者了。如果协调者超时
+个人感觉 **Spanner**[^spanner] 和 **Percolator**[^percolator] 相比最大的特点是用基 **Paxos group** 和 **TrueTime API** 代替了单点的时间戳服务。从而实现了真正意义上的平行扩容。这篇Paper没有太多提及事务的故障处理和冲突处理的部分，内容可能在我即将要看的F1 \( **Spanner**[^spanner] 的一个客户端实现 \) 里。
+
+我的理解上事务的故障处理就依赖协调者，如果协调者超时或者通知放弃，则直接事务失败。而前面的 **Wound-wait** 策略是用于死锁的处理的，但是这里有一个问题。如果事务A和事务B互相锁资源导致死锁，这两个事务可能有重合的写分组，但是又不完全一样，那么他们的协调者可能也不一样。假设死锁的资源是r1和r2，这时候分配的写入时间可能会有 \\\( t_{r1}(A) < t_{r1}(B) \\\)  但是 \\\( t_{r2}(A) > t_{r2}(B) \\\)  。这会导致两个事务都放弃重试，这种情况下随机一段时间后重试，这种机制有点像 **Raft**[^raft] 的设计。但是在另一种情况下， \\\( t_{r1}(A) > t_{r1}(B) \\\) 并且 \\\( t_{r2}(A) > t_{r2}(B) \\\) 。并且B后抵达，按照**Wound-wait** 策略，B会覆盖A的锁。但是A怎么得知锁被覆盖了呢？文中没有提及，我的想法是第一种方案可以由B的协调者来通知A的协调者，但是这个过程也可能出现故障。另一种可能更好的方案是A的协调者在等待安全时间误差之后再向所有的锁确认一遍锁是否被覆盖，这样能把异常处理逻辑收敛到一个协调者上，因为如果等待时间误差过后所有的锁如果都没被覆盖，那么再之后的事务的时间必然晚于A了。当然这会导致正常流程多一组通信，然而根据 **Spanner**[^spanner] 的设计延迟和后面的性能报告，我觉得这个通信开销还是可以接受的。
 
 目前我的理解也可能有些差错（英语不是很好）。如果有误也欢迎指正哈。
 
@@ -285,6 +280,12 @@ F1[^f1]
 
 **F1: A Distributed SQL Database That Scales**[^f1] 。
 
+两地5副本
+
+总结
+================================================
+整个看完以后我觉得这种分布式系统，各个部分其实也没太复杂的地方。但是把他们拼接起来确实是一个巨大的工程。这其中实现的话还涉及更多的细节，对SSD的优化、对文件系统的优化，对网络和延迟的优化等等。
+
 [^paxos]: https://en.wikipedia.org/wiki/Paxos_(computer_science) "Paxos"
 [^chubby]: https://ai.google/research/pubs/pub27897 "The Chubby lock service for loosely-coupled distributed systems"
 [^gfs]: https://ai.google/research/pubs/pub51 "The Google File System"
@@ -293,6 +294,7 @@ F1[^f1]
 [^spanner]: https://ai.google/research/pubs/pub39966 "Spanner: Google's Globally-Distributed Database"
 [^f1]: https://ai.google/research/pubs/pub41344 "F1: A Distributed SQL Database That Scales"
 [^redis]: https://redis.io "Redis"
+[^raft]: https://raft.github.io/ "The Raft Consensus Algorithm"
 
 [1]: https://read.douban.com/ebook/10179010/
 [2]: https://pingcap.com/
