--- a/source/post/2018/1813.md
+++ b/source/post/2018/1813.md
@@ -7,10 +7,23 @@ date: 2018-12-21 22:49:50
 draft: true
 id: 1813
 tags: 
-  - ELK
-  - elasticsearch
-  - logstash
-  - kibana
+  - google
+  - percolator
+  - spanner
+  - f1
+  - database
+  - distribute
+  - 分布式系统
+  - 分布式存储系统
+  - mysql
+  - sql
+  - nosql
+  - paxos
+  - bigtable
+  - gfs
+  - chubby
+  - oltp
+  - olap
 title: Google去中性化分布式系统论文三件套(Percolator、Spanner、F1)读后感
 type: post
 ---
@@ -21,7 +34,7 @@ type: post
 之前看过 [《大规模分布式存储系统：原理解析与架构实战》][1] ，这个系统设计还是挺有意思的，里面提及了Google的一整套系统都有论文，而且现在已经进化到下一代支持分布式跨行事务的关系型数据库系统了。所以一直很想抽时间看看Google的那套去中心化并且可以平行扩容的分布式系统和数据库的论文。之前一些计划中的我自己的项目的优化项都差不多完成了，这段时间就陆陆续续的看完了这三篇Paper，可怜我的渣渣英语，所以看得比较慢。
 
 Google的分布式系统基础组件的层层迭代真的是做的很好。在假定所有节点都可能出故障,并且任何节点出故障都不影响可用性的基础上，先是实现了分布式PB
-级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和其前端 **F1**[^f1]。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
+级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和其前端 **F1**[^f1] ，还支持OLTP和OLAP。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
 
 现在业界也很多基于这些理论并在其上进行优化的数据库项目，比较知名的比如阿里的 [PolarDB][4] 和 [pingcap][2] 的 [TiDB][3] 。
 
@@ -280,11 +293,15 @@ F1[^f1]
 
 **F1: A Distributed SQL Database That Scales**[^f1] 。
 
-两地5副本
+两地5副本，OLTP和OLAP
+
+![F1基本架构图](1813-02.png)
+
+**F1**[^f1] 客户端对 **F1**[^f1] 服务器是尽可能就近接入，当本地的节点故障或高延迟时也可以接入远距离的服务器节点。 **F1**[^f1] 服务器和其后端的 **Spanner**[^spanner] 也是尽可能部署在一起的，这样可以减少延迟。
 
 总结
 ================================================
-整个看完以后我觉得这种分布式系统，各个部分其实也没太复杂的地方。但是把他们拼接起来确实是一个巨大的工程。这其中实现的话还涉及更多的细节，对SSD的优化、对文件系统的优化，对网络和延迟的优化等等。
+整个看完以后我觉得这种分布式系统，各个部分其实也没太复杂的地方。但是把他们拼接起来确实是一个巨大的工程。这其中实现的话还涉及更多的细节，对SSD的优化、对文件系统的优化，对网络和延迟的优化等等。这个三件套系统原理上大致时这样，但是细节可以提升的点还有很多。比如 **Spanner**[^spanner] 的跨组只读事务，其实只要所有分组拉一下最后提交时间后取最大值，也可以避免很多情况下的直接用最新时间然后等待造成的延迟，实现也会很简单。
 
 [^paxos]: https://en.wikipedia.org/wiki/Paxos_(computer_science) "Paxos"
 [^chubby]: https://ai.google/research/pubs/pub27897 "The Chubby lock service for loosely-coupled distributed systems"
