--- a/source/post/2018/1812.md
+++ b/source/post/2018/1812.md
@@ -524,7 +524,7 @@ wait_for_elasticsearch_startup;
 
 主配置: config/logstash.yml
 
-```yml
+```yaml
 node.name: logstash节点名称
 path.data: 数据目录
 
@@ -554,7 +554,7 @@ xpack.monitoring.elasticsearch.sniffing: false
 ```
 
 pipeline入口配置: config/pipelines.yml
-```yml
+```yaml
 - pipeline.id: app_to_redis
   pipeline.workers: 8
   queue.type: memory
@@ -649,7 +649,7 @@ output {
 
 [kibana][3] 是用于集群管理的，也贴一下我的配置吧。就一个文件 config/kibana.yml
 
-```yml
+```yaml
 # 监听端口
 server.port: 5601
 server.host: "监听地址"
@@ -682,7 +682,7 @@ i18n.defaultLocale: "zh_CN"
 
 我还用了nginx做反向代理，配置如下:
 
-```
+```nginx
 upstream elasticsearch {
     server elasticsearch主节点-IP:9200;
 }
