--- a/source/post/2018/1813.md
+++ b/source/post/2018/1813.md
@@ -315,12 +315,32 @@ F1[^f1]
 + 元表变更不能影响服务的正常运行 （ 直接用 **Spanner**[^spanner] 的话会锁表导致暂时性服务不可用）
 + 元表变更期间请求延迟不应该显著提高 （ 直接用 **Spanner**[^spanner] 的话都服务不可用了，就不用说延迟了）
 
+为了实现上面的特性，**F1**[^f1] 的元表变更实现了下面这两个规则：
+
+1. 每个 **F1**[^f1] 服务器节点内最多有两个版本的元表，服务器内正在使用的元表要么是当前元表，要么是下一个元表。
+2. 元表变更的事务分为几个阶段，并且每个阶段必须是互相兼容的。
+> 比如上面的例子里，第一步增加一个只处理删除操作的索引 \\\( I \\\) ， 然后等所有服务器节点都获知这个索引之后，再开启所有节点对  \\\( I \\\) 的写入权限和初始化。等所有的节点初始化完成后再返回索引建立完成。这样在第一阶段中间删除数据的话，仅仅是最后初始化的时候就不会再建立这个索引了；而在第二阶段任意节点删除数据，也能通知到删除这条数据的索引。
+
 ## 事务
 
-1. Snapshot transactions
-2. Pessimistic transactions
-3. Optimistic transactions
- 
+**F1**[^f1] 的事务大体上分三种，
+
+1. Snapshot transactions （快照事务），对应 **Spanner**[^spanner] 的只读快照事务，用于读取一段时间（5-10秒）之前的数据。可以在任意主节点或从节点上进行。
+2. Pessimistic transactions （悲观锁事务），对应 **Spanner**[^spanner] 的读写事务，这个事务也会加悲观锁。
+3. Optimistic transactions （优化写事务），这是 **F1**[^f1] 的默认事务模型，是针对于主流应用场景的优化。
+
+为什么说 Optimistic transactions （优化写事务） 是针对于主流应用场景的优化呢？ 是因为大部分的业务一次处理的数据量都不会很大，一般走 **读-处理-写** ，读可能涉及很多行，写一般涉及的数据行比较少。而一个长时间的事务，大多数情况下处理数据才是比较耗时的，如果这期间一直不释放锁，反而导致冲突率大幅增加而阻塞服务。 
+
+Optimistic transactions 使用的是类似乐观锁的方案，它在每个数据行里插入一个隐藏的列，记录 **最后写入的时间戳（也可以理解为版本号）**。 在事务的读取阶段读出这个字段，然后实际写出的阶段再在 **Spanner**[^spanner] 这一层锁这个 **最后写入的时间戳（版本号）** 的列即可。这个数据很小并且只有一列，所以可以把锁的冲突范围缩减到一个非常小的范围里。如果最后写出的时候发现这个 **时间戳（版本号）** 变化了，则事务失败。这个机制使得 **F1**[^f1] 虽然内部还是使用了 **Spanner**[^spanner] 的读写事务， 但是对多个事务共享数据的冲突可能性大幅降低了，而且对外是一个乐观锁的机制。
+
+Optimistic transactions 的优点首先毋庸置疑的，对于长时间事务而言，锁冲突变少了；然后 **F1**[^f1] 对这种事务透明地重试也变容易了；其次，由于状态保留在客户端，如果服务器重试失败，客户端也可以换节点重试，也更利于负载均衡；最后就是事务执行期间，如果其他事务需要读这些行的数据也是不会阻塞的。当然Optimistic transactions 也有一些缺陷，其一是新插入的数据行冲突问题（因为时间戳存在于行数据里，多个节点插入同一个Key的话涉及插入冲突），这点可以通过对上层父级表加乐观锁实现；另一个是如果真的同时有大量的对同一行的数据操作，会导致失败率非常高，这也是所有乐观锁的缺陷。这个就需要上层业务自己斟酌做批量提交或是使用其他类型的事务了。
+
+**F1**[^f1] 默认是使用行级锁，但是也可以业务层自己指定锁的分组，以进一步减小锁冲突的可能性。
+
+和大多数数据库服务一样， **F1**[^f1] 也提供变更历史的功能。变更历史有很多作用，比如主从同步、故障恢复等等。 **F1**[^f1] 里还有个重量级的应用是用作订阅-发布模型的消息队列系统， 有了变更历史，这个分布式的订阅-发布模型的消息队列也很容易实现了。 **F1**[^f1] 的变更历史存储是作为实际数据表的子表存储的，这样可以尽可能放在一起，减少高延时操作。
+
+## **F1**[^f1] 的客户端设计
+
 总结
 ================================================
 整个看完以后我觉得这种分布式系统，各个部分其实也没太复杂的地方。但是把他们拼接起来确实是一个巨大的工程。这其中实现的话还涉及更多的细节，对SSD的优化、对文件系统的优化，对网络和延迟的优化等等。这个三件套系统原理上大致时这样，但是细节可以提升的点还有很多。比如 **Spanner**[^spanner] 的跨组只读事务，其实只要所有分组拉一下最后提交时间后取最大值，也可以避免很多情况下的直接用最新时间然后等待造成的延迟，实现也会很简单。
