--- a/source/post/2018/1809.md
+++ b/source/post/2018/1809.md
@@ -20,7 +20,7 @@ tags:
   - rustls
   - ring
   - tokio
-  - features
+  - futures
   - await
   - mesalink
 title: Rust的第二次接触-写个小服务器程序
@@ -448,7 +448,7 @@ cross build --target aarch64-unknown-linux-uclibc ;
 Rust2018
 ----------------------------------------------
 
-上次看[Rust][1]的时候看到了它的2018计划，其中包括比较重要的std内的Features库和2.0版本的宏，还有基于这两个的await功能。这也是比较吸引我的地方。不过[官方的异步编程指引](https://aturon.github.io/apr/)似乎还没有完成。并且第二版的《Rust 程序设计语言》又被整理出了2018版： https://doc.rust-lang.org/book/
+上次看[Rust][1]的时候看到了它的2018计划，其中包括比较重要的std内的Futures库和2.0版本的宏，还有基于这两个的await功能。这也是比较吸引我的地方。不过[官方的异步编程指引](https://aturon.github.io/apr/)似乎还没有完成。并且第二版的《Rust 程序设计语言》又被整理出了2018版： https://doc.rust-lang.org/book/
 
 现在也是看到越来越多的工具系统增加了对[Rust][1]的支持。比如 [gdbgui](https://gdbgui.com/docs.html) 里专门对[Rust][1]的支持，[Rust][1]也有自己的[符号表规则](https://en.wikipedia.org/wiki/Name_mangling#Rust) 。虽然发展速度和go差距甚远，但是看到进展神速也是蛮开心的。
 
@@ -561,7 +561,7 @@ fn main() {
 [11]: https://github.com/mesalock-linux/mesalink
 [12]: https://github.com/sfackler/rust-openssl
 [13]: https://actix.rs/
-[14]: https://crates.io/crates/features
+[14]: https://crates.io/crates/futures
 [15]: https://hyper.rs/
 [16]: https://rocket.rs/
 [17]: https://clap.rs/
