--- a/source/post/2019/1901.md
+++ b/source/post/2019/1901.md
@@ -39,7 +39,7 @@ type: post
 
 机器人主要是实现Web Server监听来自企业微信的消息，
 
-```mermaid
+{{< mermaid id="process_wxwork_robot" >}}
 graph LR;
     收包-->Dispatch;
     Dispatch-->鉴权;
@@ -49,7 +49,7 @@ graph LR;
     打包-->加密;
     加密-->二次打包;
     二次打包-->Response;
-```
+{{< /mermaid >}}
 
 这个流程。截至到我写这篇分享为止，回包还仅支持Markdown和Text两种。 先贴下成果吧： https://github.com/owt5008137/wxwork_robotd
 
@@ -73,7 +73,7 @@ graph LR;
 
 大致流程就是这样：
 
-```mermaid
+{{< mermaid id="dispatch_wxwork_robot">}}
 graph TB;
     执行消息-->URL查找项目;
     URL查找项目-->项目1;
@@ -94,7 +94,7 @@ graph TB;
     准备执行环境-->执行内容;
     执行内容-->打包结果;
     打包结果-->构造回包;
-```
+{{< /mermaid >}}
 
 在第一阶段实现完成之后，企业微信又增加了分享机器人的功能。这样一个机器人的URL就可能对应多个群，我们原来有个脚本为了发送图片回去，是收到消息后启动一个后台脚本，执行完调用发消息的接口去发送结果的，而这么一来以后，原来的发布消息的接口变成了群发。 后来我看了下它也增加了个一个 ```ChatId``` 字段和 ```GetChatInfoUrl``` 字段。前面一个用于区分来源的群，收到消息以后。发消息接口附带这个参数就能实现仅回复来源的群，而后一个接口是用于拉取来源群的信息的。
 
