--- a/source/post/2019/1901.md
+++ b/source/post/2019/1901.md
@@ -106,9 +106,78 @@ graph TB;
 
 在使用过程中我发现这套工具还不是非常稳定，特别是MIPS架构下有些很基础的库构建不出来，当然这也算是这些库的构建脚本或者代码有点问题。所以最终我只提供了我测试能够打包出来的几个版本，至少目前Linux的ARM、ARM64、x86、x86_64和和Windows的x86、x86_64没什么太大问题，部分架构下的musl工具链也编不出来。最终自动发布的结果都放在 https://github.com/owt5008137/wxwork_robotd/releases 了，以后发现有新的可用适配环境的话再加吧。
 
-大家有兴趣也可以下载自己需要的架构的预编译好的机器人发布包自己Happy自己玩。 [README.md](https://github.com/owt5008137/wxwork_robotd/blob/master/README.md) 里的用法说明应该还是比较完整易懂的。
+大家有兴趣也可以下载自己需要的架构的预编译好的机器人发布包自己Happy自己玩。配置大概这个样子：
 
-写在最后
+```javascript
+{
+    "listen": ["0.0.0.0:12019", ":::12019"], // 监听列表，这里配置了ipv4和ipv6地址
+    "taskTimeout": 4000,                     // 超时时间4000ms，企业微信要求在5秒内回应，这里容忍1秒钟的网络延迟
+    "workers": 8,                            // 工作线程数
+    "backlog": 256,                          // 建立连接的排队长度
+    "cmds": {                                // 这里所有的command所有的project共享
+        "default": {                         // 如果找不到命令，会尝试找名称为default的命令执行，这时候
+            "type": "echo",                  // 直接输出类型的命令
+            "echo": "我还不认识这个指令呐!({{WXWORK_ROBOT_CMD}})", // 输出内容
+            "hidden": true                   // 是否隐藏，所有的命令都有这个选项，用户help命令隐藏这条指令的帮助信息
+        },
+        "(help)|(帮助)|(指令列表)": {
+            "type": "help",                    // 帮助类型的命令
+            "description": "help|帮助|指令列表", // 描述，所有的命令都有这个选项，用于help类型命令的输出，如果没有这一项，则会直接输出命令的key（匹配式）
+            "prefix": "### 可用指令列表\r\n"       // 帮助信息前缀
+            "suffix": ""                       // 帮助信息后缀
+        },
+        "说\\s*(?P<MSG>[^\\r\\n]+)": {
+            "type": "echo",
+            "echo": "{{WXWORK_ROBOT_CMD_MSG}}", // 可以使用匹配式里的变量
+            "description": "说**消息内容**"
+        },
+        "执行命令\\s*(?P<EXEC>[^\\s]+)\\s*(?P<PARAM>[^\\s]*)": {
+            "type": "spawn",                    // 启动子进程执行命令，注意，任务超时并不会被kill掉
+            "exec": "{{WXWORK_ROBOT_CMD_EXEC}}",
+            "args": ["{{WXWORK_ROBOT_CMD_PARAM}}"],
+            "cwd": "",
+            "env": {                            // 命令级环境变量，所有的命令都有这个选项，这些环境变量仅此命令有效
+                "TEST_ENV": "all env key will be WXWORK_ROBOT_CMD_{NAME IN ENV} or WXWORK_ROBOT_PROJECT_{NAME}"
+            },
+            "description": "执行命令**可执行文件路径** ***参数***",
+            "output_type": "输出类型"            // markdown/text
+        }
+    },
+    "projects": [{                                                          // 项目列表，可以每个项目对应一个机器人，也可以多个机器人共享一个项目
+        "name": "test_proj",                                                // 名称，影响机器人回调路径，比如说这里的配置就是: http://外网IP:/12019/test_proj/
+        "token": "hJqcu3uJ9Tn2gXPmxx2w9kkCkCE2EPYo",                        // 对应机器人里配置的Token
+        "encodingAESKey": "6qkdMrq68nTKduznJYO1A37W2oEgpkMUvkttRToqhUt",    // 对应机器人里配置的EncodingAESKey
+        "env": {                                                            // 项目级环境变量，这些环境变量仅此项目有效
+            "testURL": "robots.txt"
+        },
+        "cmds": {                                                           // 项目级命令，这些命令仅此项目有效
+            "http请求": {
+                "type": "http",                                             // http请求类命令
+                "method": "get",                                            // http方法，可选值为 get/post/put/delete/head，如果不填则会自动从设置，如果post里有数据则会自动设为post，否则自动设为get
+                "url": "https://owent.net/{{WXWORK_ROBOT_PROJECT_TEST_URL}}", // http请求地址
+                "post": "",                                                   // body里的数据
+                "content_type": "",                                           // content-type，可不填
+                "headers": {                                                  // 请求的额外header
+                    "X-TEST": "value"
+                },
+                "echo": "已发起HTTP请求，回包内容\r\n{{WXWORK_ROBOT_HTTP_RESPONSE}}" // 机器人回应内容
+            },
+            "访问\\s*(?P<URL>[^\\r\\n]+)": {
+                "type": "http",
+                "url": "{{WXWORK_ROBOT_CMD_URL}}",
+                "post": "",
+                "echo": "HTTP请求: {{WXWORK_ROBOT_CMD_URL}}\r\n{{WXWORK_ROBOT_HTTP_RESPONSE}}",
+                "description": "访问**URL地址**"
+            }
+        }
+    }]
+}
+```
+当然实际配置里用的是标准json，所以是不支持注释的。上面的例子里projects只配了一个（访问地址为: http://127.0.0.1:12019/test_proj ），但是也是支持配多个的。[README.md](https://github.com/owt5008137/wxwork_robotd/blob/master/README.md) 里的用法说明应该还是比较完整易懂的。
+
+自动由CI发release包，之前美搞过。这次也是为了方便打包发布多架构平台试了下。这方面倒是没什么坑，appveyor在页面上由token加密工具。travis得用命令行，稍微麻烦点。
+
+一些感想
 ----------------------------------------------
 倒腾完这个小玩具，我也基本上了解了 [rust][1] 里 [futures][14] 的设计模型和设计思路了吧。通过标准化的依赖反转来减轻开发人员的心智负担，同时为了静态类型语言而做的各种类型转换着实是有点绕，要各种 ```map``` 结果和 ```map_err``` ，如果涉及join操作可能还要提取结果，也是有点反人类。等新版出来移除了强制的Error类型依赖应该会简单一些。另外还有不同futures之间的参数传递要保证最优的生命周期管理就只能借助它的零开销移动语义，通过Result或者Error传递给下一跳了，这个在 [await][15] 功能标准化了以后也能解决这个问题。
 
