--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -31,7 +31,7 @@ type: post
 | PALM          | 多核        | 共享内存          | 线性                    | 无                    |
 | MICA          | 多核        | 共享内存          | 线性                    | 无                    |
 | Redis         | 单核        | N/A               | 线性                    | 串行化                |
-| COPS, Bolt-on | 分布式      | 消息队列          | Causal | Causal |
+| COPS, Bolt-on | 分布式      | 消息队列          | 因果一致性 | 因果一致性 |
 | Bayou         | 分布式      | 消息队列          | 最终一致性, 单调读/写, Read Your Writes | 最终一致性 |
 | Dynamo        | 分布式      | 消息队列          | 线性, 最终一致性 | 无 |
 | Cassandra     | 分布式      | 消息队列          | 线性, 最终一致性 | 无 |
@@ -45,15 +45,35 @@ type: post
 | MongoDB       | 多核&分布式 | 共享内存&消息队列 | 线性 | 无 |
 | H-Store       | 多核&分布式 | 消息队列          | 线性 | 串行化 |
 | ScyllaDB      | 多核&分布式 | 消息队列          | 线性, 最终一致性 | 无 |
-| Anna          | 多核&分布式 | 消息队列          | 最终一致性, Causal, Item Cut, Writes Follow Reads, Monotonic Reads/Writes, Read Your Writes, PRAM | Read Committed, Read Uncommitted |
+| Anna          | 多核&分布式 | 消息队列          | 最终一致性, 因果一致性, Item Cut, Writes Follow Reads, 单调读/写, Read Your Writes, PRAM | Read Committed, Read Uncommitted |
 
-> 一致性说明: **线性** 是指在更新了某行之后，后续的客户端不会读到老数据，通常用在单行一致性上； **最终一致性** 是指在更新了某行之后，后续的客户端可能在某些（缓存）结点上会读到老数据（特别是并发执行的事务），但是最后（一段时间后）一定会读到一致的最新数据； **串行化** 是指对多个读写同一行数据的事务，采用排序和排队执行的机制，这样也能保证数据的严格一致性； **单调读** 是指在某一个客户端读取到新数据后，不会再读到老数据，但是有可能在更新一行后短期内客户端仍然读到老数据； **单调写** 是指对单个客户端的写入操作一定是有序的；
+> 一致性说明:
+> + [**线性**][6] 是指在更新了某行之后，后续的客户端不会读到老数据，通常用在单行一致性上，最强的一致性模型；
+> + [**最终一致性**][5] 是指在更新了某行之后，后续的客户端可能在某些（缓存）结点上会读到老数据（特别是并发执行的事务），但是最后（一段时间后）一定会读到一致的最新数据；
+> + [**串行化**][7] 是指对多个读写同一行数据的事务，采用排序和排队执行的机制，这样也能保证数据的严格一致性，但是通常这涉及加锁（[spanner][^spanner]/[f1][^f1]）或单点原子化操作（[redis][^redis]）；
+> + **单调读** 是指在某一个客户端读取到新数据后，不会再读到老数据，但是有可能在更新一行后短期内客户端仍然读到老数据；
+> + **单调写** 是指对单个客户端的写入操作一定是有序的；
+> + [**因果一致性**][4] 是指在某个客户端上对一组Key的读写操作会被认为有因果关系，那么在进程上也都保持一样的可见性顺序。
+> + [**Read Your Writes**][8] 是指当一个数据行被更新后，后面的读操作一定会读到这个新值。通常如果数据库系统有 **N个副本节点** ， **W个节点感知到写入** ， **R个节点对读操作返回的数据一致** ， 且如果 **W + R > N** ， 那么我们认为当前系统符合 [**Read Your Writes**][8] 一致性。
+> See https://en.wikipedia.org/wiki/Consistency_model for more details
+
+
+冲突
+================================================
+自定义 [最终一致性][5] 下的冲突解决策略。
 
 
 [^anna]: http://db.cs.berkeley.edu/jmh/papers/anna_ieee18.pdf "Anna: A KVS For Any Scale"
 [^redis]: https://redis.io "Redis"
 [^raft]: https://raft.github.io/ "The Raft Consensus Algorithm"
+[^spanner]: https://ai.google/research/pubs/pub39966 "Spanner: Google's Globally-Distributed Database"
+[^f1]: https://ai.google/research/pubs/pub41344 "F1: A Distributed SQL Database That Scales"
 
 [1]: https://redis.io/
 [2]: https://github.com/fastio/pedis
 [3]: http://db.cs.berkeley.edu/jmh/papers/anna_ieee18.pdf
+[4]: https://en.wikipedia.org/wiki/Causal_consistency
+[5]: https://en.wikipedia.org/wiki/Eventual_consistency
+[6]: https://en.wikipedia.org/wiki/Linearizability
+[7]: https://en.wikipedia.org/wiki/Serializability
+[8]: http://www.dbms2.com/2010/05/01/ryw-read-your-writes-consistency/
