修订错别字

--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -73,6 +73,14 @@ type: post
 > + [**Read Committed**][13] 是指事务读取数据时，不允许看到其他未提交事务所写入的数据，通常涉及多个事务并发执行且需要访问同一组数据；
 > See https://en.wikipedia.org/wiki/Consistency_model for more details
 
+Anna架构设计
+================================================
+
+actor模型
+
+多线程，按CPU核心数分配线程。
+
+每个actor线程由自己的数据变更集(**changeset**)，然后定期访问广播通道执行合并操作。
 
 冲突
 ================================================
