--- a/source/post/2019/1902.md
+++ b/source/post/2019/1902.md
@@ -34,7 +34,7 @@ type: post
 之前看过 [《大规模分布式存储系统：原理解析与架构实战》][1] ，这个系统设计还是挺有意思的，里面提及了Google的一整套系统都有论文，而且现在已经进化到下一代支持分布式跨行事务的关系型数据库系统了。所以一直很想抽时间看看Google的那套去中心化并且可以平行扩容的分布式系统和数据库的论文。之前一些计划中的我自己的项目的优化项都差不多完成了，这段时间就陆陆续续的看完了这三篇Paper，可怜我的渣渣英语，所以看得比较慢。
 
 Google的分布式系统基础组件的层层迭代真的是做的很好。在假定所有节点都可能出故障,并且任何节点出故障都不影响可用性的基础上，先是实现了分布式PB
-级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据并且最终一致性并且支持自动按列分组和分片的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和其前端 **F1**[^f1] ，还支持OLTP和OLAP。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
+级别的文件系统 **GFS**[^gfs] 。然后在此基础上，实现了支持海量数据、支持单行原子操作、支持自动按列分组和分片并且跨数据中心最终一致性保证的KV存储系统 **Bigtable**[^bigtable] 。而我准备看的这三篇文章分别是：基于 **Bigtable**[^bigtable] 的分布式增量事务和通知系统 **Percolator**[^percolator] 、保证强一致性并且支持分布式事务和跨行事务的的大规模关系型分布式数据库系统 **Spanner**[^spanner] 和其前端 **F1**[^f1] ，还支持OLTP和OLAP。上面所有的分布式系统都基于更早前实现的基于 **Paxos**[^paxos] 算法的分布式锁服务 **Chubby**[^chubby]。
 
 现在业界也很多基于这些理论并在其上进行优化的数据库项目，比较知名的比如阿里的 [PolarDB][4] 和 [pingcap][2] 的 [TiDB][3] 。
 
@@ -135,7 +135,6 @@ class Transaction {
 
 3. 分配一个解锁事务 **提交时间戳（版本号,commit_ts）**
   > 复查主键的锁上的事务时间戳（版本号），这里是为了实现原子的CAS操作。用于处理其他Worker节点认为本次事务卡死而清理它导致的一致性问题。
-  > 由于 **Bigtable**[^bigtable] 是最终一致性的，所以这里保证多个事务处理一个
 4. 主键解锁，版本号设为 **提交时间戳（版本号,commit_ts）** ，这个值肯定比 **事务时间戳（版本号,start_ts）** 大
 5. 所有其他Key解锁，并把版本号设为 版本号设为 **提交时间戳（版本号,commit_ts）**
 
@@ -149,7 +148,7 @@ class Transaction {
 
 ## 关于冲突的细节
 
-上面所有的操作都基于 **Bigtable**[^bigtable] 的按版本号记录数据的功能，数据更新和加解锁都是标记一个更新的时间修改的某个数据。这和 **GFS**[^gfs] 和 **Bigtable**[^bigtable] 只有Add和Update，没有Delete的特性有关，具体的详情 [《大规模分布式存储系统：原理解析与架构实战》][1]  和 这两个组件的Paper里都有，这里就不复数原理和原因了。
+上面所有的操作都基于 **Bigtable**[^bigtable] 的按版本号记录数据的功能，数据更新和加解锁都是标记一个更新的时间修改的某个数据。这和 **GFS**[^gfs] 和 **Bigtable**[^bigtable] 所有操作都是追加行为的特性有关，具体的详情 [《大规模分布式存储系统：原理解析与架构实战》][1]  和 这两个组件的Paper里都有，这里就不复数原理和原因了。
 
 锁信息要记录事务的Worker节点。每个Key只可能有一个未完成的事务，这时候lock信息会记录关联的主键 ；Worker节点会不断地写入自己的保活信息到 **Chubby** [^chubby] 中（原文中叫分布式锁服务） ；在故障恢复流程中，如果保活信息（锁）丢失或超时了，则是Worker异常崩溃或卡死了，可以直接认为事务失败。
 
