--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -64,7 +64,7 @@ type: post
 > + **单调读(Monotonic Reads)** 是指在某一个客户端读取到新数据后，不会再读到老数据，但是有可能在更新一行后短期内客户端仍然读到老数据，属于 [**最终一致性**][5] 的一种；
 > + **单调写(Monotonic Writes)** 是指对单个客户端的写入操作一定是有序的，属于 [**最终一致性**][5] 的一种；
 > + [**因果一致性(Causal)**][4] 是指在某个客户端上对一组Key的读写操作会被认为有因果关系，那么在进程上也都保持一样的可见性顺序，属于 [**最终一致性**][5] 的一种；
-> + [**Read Your Writes**][8] 是指当一个数据行被更新后，后面的读操作一定会读到这个新值。通常如果数据库系统有 **N个副本节点** ， **W个节点感知到写入** ， **R个节点对读操作返回的数据一致** ， 且如果 **W + R > N** ， 那么我们认为当前系统符合 [**Read Your Writes**][8] 一致性，属于 [**最终一致性**][5] 的一种；
+> + [**Read Your Writes**][8] 是指当一个数据行被更新后，这个进程后面的读操作一定会读到这个新值。通常如果数据库系统有 **N个副本节点** ， **W个节点感知到写入** ， **R个节点对读操作返回的数据一致** ， 且如果 **W + R > N** ， 那么我们认为当前系统符合 [**Read Your Writes**][8] 一致性，属于 [**最终一致性**][5] 的一种；
 > + [**Session**][10] 是[**Read Your Writes**][8]的一种更具体的行为，即每一次客户端连接到服务器的Session中保证 [**Read Your Writes**][8] 一致性，如果重新建立Session则不保证，属于 [**最终一致性**][5] 的一种；
 > + [**Bounded Staleness**][9] 是指读取操作最多滞后于写入操作最多k个版本或t个周期之后，属于 [**最终一致性**][5] 的一种；
 > + **Writes follows reads** 是指对一个Key的读操作后一定跟着这个Key的写操作；
